[FIXED] layer type when loading from file
Former-commit-id: df24e170a6a98757365fd9d037d5e3959643530c

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -393,6 +393,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\lr\dataset\LayerFactory.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\LayerFactory.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\lr\dataset\ShapeLayer.cpp"
 					>
 				</File>
