[ADDED] etexture和shape之间的关联持久化
Former-commit-id: e32176c4346d967231ce7173bd4b97c59e401912

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -408,8 +408,24 @@
 					RelativePath="..\..\..\src\lr\dataset\ShapeLayer.h"
 					>
 				</File>
+			</Filter>
+			<Filter
+				Name="ud"
+				>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\BaseFileUD.h"
+					>
+				</File>
 				<File
 					RelativePath="..\..\..\src\lr\dataset\ShapesUD.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\ud_type.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\UserData.h"
 					>
 				</File>
 			</Filter>
