[ADDED] ImageVerticalFlip for easydb
Former-commit-id: faa0741adec561eda108830d936a1eee924cbf78

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -509,6 +509,18 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="process"
+					>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\ImageVerticalFlip.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\ImageVerticalFlip.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="json"
