[ADDED] right popup select
Former-commit-id: b037b008ebc6371be45236f92065390827c57813

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -200,6 +200,14 @@
 					RelativePath="..\..\..\src\drag2d\operator\AutoAlign.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\operator\RightPopupMenu.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\operator\RightPopupMenu.h"
+					>
+				</File>
 				<Filter
 					Name="sprite"
 					>
