[FIXED] lr pack
Former-commit-id: 15174c2fe19b2b0b1d65029b312df65882fc329f

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -601,6 +601,10 @@
 					Name="lr"
 					>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\lr_typedef.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb_cl\LRPacker.cpp"
 						>
 					</File>
