[CHANGED] lr pack name
Former-commit-id: 34c3fd46a70c101b2cef1ceb832dc65093e1c429

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -644,11 +644,19 @@
 							>
 						</File>
 						<File
-							RelativePath="..\..\..\src\easydb_cl\LRLayersPack.cpp"
+							RelativePath="..\..\..\src\easydb_cl\LRJsonPacker.cpp"
 							>
 						</File>
 						<File
-							RelativePath="..\..\..\src\easydb_cl\LRLayersPack.h"
+							RelativePath="..\..\..\src\easydb_cl\LRJsonPacker.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\easydb_cl\LRSeparateComplex.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\easydb_cl\LRSeparateComplex.h"
 							>
 						</File>
 						<File
@@ -657,14 +665,6 @@
 						</File>
 						<File
 							RelativePath="..\..\..\src\easydb_cl\LRToComplex.h"
-							>
-						</File>
-						<File
-							RelativePath="..\..\..\src\easydb_cl\SeparateToComplex.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\..\src\easydb_cl\SeparateToComplex.h"
 							>
 						</File>
 					</Filter>
