[ADDED] 特殊层的颜色标识
Former-commit-id: 8b6a5a9cfe61d6b4f88ecd73f729610de7f893d5

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -249,9 +249,21 @@
 		<Filter
 			Name="view"
 			>
+			<File
+				RelativePath="..\..\..\src\lr\view\typedef.h"
+				>
+			</File>
 			<Filter
 				Name="stage"
 				>
+				<File
+					RelativePath="..\..\..\src\lr\view\DrawSpritesVisitor.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\view\DrawSpritesVisitor.h"
+					>
+				</File>
 				<File
 					RelativePath="..\..\..\src\lr\view\StageCanvas.cpp"
 					>
