[FIXED] lr pack处理logic文件
Former-commit-id: 11418af6cc7a9c2ff4d1895ef9ab3db356e4b467

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -601,6 +601,14 @@
 					Name="lr"
 					>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\lr_tools.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\lr_tools.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb_cl\lr_typedef.h"
 						>
 					</File>
