--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -856,6 +856,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\drag2d\dataset\sprite_utility.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\sprite_utility.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\drag2d\dataset\SpriteFactory.cpp"
 						>
 					</File>
