[ADDED] pack lua desc
Former-commit-id: d9de1ed628327b38841d6aa17824397f82af7256

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -356,6 +356,14 @@
 						RelativePath="..\..\..\src\easydb_cl\PackCoco.h"
 						>
 					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFile.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFile.h"
+						>
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
