--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -401,6 +401,26 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="ps"
+			>
+			<File
+				RelativePath="..\..\..\external\ps\particle3d.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\ps\particle3d.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\ps\utility.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\ps\utility.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\ejoy2d.c"
 			>
@@ -459,7 +479,7 @@
 					Name="VCResourceCompilerTool"
 					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
 				/>
-			</FileConfiguration>			
+			</FileConfiguration>
 		</File>
 	</Files>
 	<Globals>
