--- a/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
+++ b/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
@@ -188,6 +188,14 @@
 					RelativePath="..\..\..\src\libparticle3d\ps_config.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle3d\PSConfigMgr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle3d\PSConfigMgr.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -215,10 +223,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libparticle3d\FileAdapter.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libparticle3d\FileAdapterNew.h"
 				>
 			</File>
 			<File
@@ -348,10 +352,6 @@
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\libparticle3d\config.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libparticle3d\FileAdapterNew.cpp"
 			>
 		</File>
 	</Files>
