--- a/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -272,14 +272,6 @@
 				RelativePath="..\..\..\src\libcoco\IPackNode.h"
 				>
 			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\PackNodeMgr.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\PackNodeMgr.h"
-				>
-			</File>
 			<Filter
 				Name="nodes"
 				>
@@ -292,21 +284,85 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libcoco\PackLabel.cpp"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\src\libcoco\PackLabel.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libcoco\PackPicture.cpp"
 					>
 				</File>
 				<File
 					RelativePath="..\..\..\src\libcoco\PackPicture.h"
 					>
 				</File>
+				<Filter
+					Name="builders"
+					>
+					<File
+						RelativePath="..\..\..\src\libcoco\PackNodeFactory.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcoco\PackNodeFactory.h"
+						>
+					</File>
+					<Filter
+						Name="picture"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\ImageBuilder.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\ImageBuilder.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\Scale9Builder.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\Scale9Builder.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="label"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelBuilder.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelBuilder.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="animation"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\AnimBuilder.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\AnimBuilder.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\ComplexBuilder.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\ComplexBuilder.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\IconBuilder.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\IconBuilder.h"
+							>
+						</File>
+					</Filter>
+				</Filter>
 			</Filter>
 		</Filter>
 		<File
