--- a/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -150,114 +150,6 @@
 	</References>
 	<Files>
 		<Filter
-			Name="epe"
-			>
-			<File
-				RelativePath="..\..\..\src\libcoco\epe\CocoPacker.cpp"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AssemblerListingLocation="..\libcoco\x86\Debug"
-						ObjectFile="..\libcoco\x86\Debug\epe"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AssemblerListingLocation="..\libcoco\x86\Release"
-						ObjectFile="..\libcoco\x86\Release\epe"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epe\CocoPacker.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epe\PackLuaFile.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epe\PackLuaFile.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epe\ParserLuaFile.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epe\ParserLuaFile.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epe\TexturePacker.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epe\TexturePacker.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="epd"
-			>
-			<File
-				RelativePath="..\..\..\src\libcoco\epd\CocoPacker.cpp"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AssemblerListingLocation="..\libcoco\x86\Debug"
-						ObjectFile="..\libcoco\x86\Debug\epd"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AssemblerListingLocation="..\libcoco\x86\Release"
-						ObjectFile="..\libcoco\x86\Release\epd"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epd\CocoPacker.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epd\TextureMgr.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epd\TextureMgr.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epd\TPAdapter.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epd\TPAdapter.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epd\TPParser.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libcoco\epd\TPParser.h"
-				>
-			</File>
-		</Filter>
-		<Filter
 			Name="new"
 			>
 			<File
@@ -270,6 +162,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libcoco\IPackNode.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TexturePacker.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\TexturePacker.h"
 				>
 			</File>
 			<Filter
@@ -302,6 +202,10 @@
 				<Filter
 					Name="builders"
 					>
+					<File
+						RelativePath="..\..\..\src\libcoco\INodeBuilder.h"
+						>
+					</File>
 					<File
 						RelativePath="..\..\..\src\libcoco\PackNodeFactory.cpp"
 						>
@@ -401,30 +305,158 @@
 				</Filter>
 			</Filter>
 		</Filter>
-		<File
-			RelativePath="..\..\..\src\libcoco\SymbolDependanceSorter.cpp"
+		<Filter
+			Name="old"
 			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\SymbolDependanceSorter.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\SymbolSet.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\SymbolSet.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\Utility.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\libcoco\Utility.h"
-			>
-		</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\SymbolDependanceSorter.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\SymbolDependanceSorter.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\SymbolSet.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\SymbolSet.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\Utility.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\Utility.h"
+				>
+			</File>
+			<Filter
+				Name="epd"
+				>
+				<File
+					RelativePath="..\..\..\src\libcoco\epd\CocoPacker.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AssemblerListingLocation="..\libcoco\x86\Debug"
+							ObjectFile="..\libcoco\x86\Debug\epd"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AssemblerListingLocation="..\libcoco\x86\Release"
+							ObjectFile="..\libcoco\x86\Release\epd"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epd\CocoPacker.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epd\TextureMgr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epd\TextureMgr.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epd\TPAdapter.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epd\TPAdapter.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epd\TPParser.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epd\TPParser.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="epe"
+				>
+				<File
+					RelativePath="..\..\..\src\libcoco\epe\CocoPacker.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AssemblerListingLocation="..\libcoco\x86\Debug"
+							ObjectFile="..\libcoco\x86\Debug\epe"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AssemblerListingLocation="..\libcoco\x86\Release"
+							ObjectFile="..\libcoco\x86\Release\epe"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epe\CocoPacker.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epe\PackLuaFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epe\PackLuaFile.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epe\ParserLuaFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epe\ParserLuaFile.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epe\TexturePacker.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							ObjectFile="..\libcoco\x86\Debug\epe"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							ObjectFile="..\libcoco\x86\Release\epe"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcoco\epe\TexturePacker.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
