--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -364,6 +364,14 @@
 						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFile.h"
 						>
 					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFileNew.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFileNew.h"
+						>
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
