[ADDED] quad icon
Former-commit-id: 39cf9e0d88091ced0fe58d4e12fc3e676a026bf3

--- a/easyicon/platform/msvc2008/projects/libicon.vcproj
+++ b/easyicon/platform/msvc2008/projects/libicon.vcproj
@@ -260,6 +260,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\libicon\QuadIcon.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libicon\QuadIcon.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libicon\RectIcon.cpp"
 					>
 				</File>
