[ADDED] coco loader
Former-commit-id: f148e5a65aeab767ce5bc8dbe534d3eabbe04815

--- a/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -153,6 +153,14 @@
 			Name="new"
 			>
 			<File
+				RelativePath="..\..\..\src\libcoco\CocoLoader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\CocoLoader.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libcoco\CocoPacker.cpp"
 				>
 			</File>
@@ -170,6 +178,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libcoco\TexturePacker.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcoco\trans_ejoy2d_data.lua"
 				>
 			</File>
 			<Filter
