--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -153,6 +153,14 @@
 			Name="fileio"
 			>
 			<File
+				RelativePath="..\..\..\src\libcomplex\FileLoader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\FileLoader.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libcomplex\FileSaver.cpp"
 				>
 			</File>
